--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tudders' Blog
 
 # Short bio or description (displayed in the header)
-description: Web Developer from the Moon
+description: Man from the Moon
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://www.northcote.com/wp-content/uploads/2015/09/michelin-star.jpg
